--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   <a>
-  href="http://www.Joeyswebpage.com">Joeyswebpage</a>
+  href="http://www.Joeyswebpage.com">Joeyswebpage
+  </a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
