--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
-  <a> href="http://www.Joeyswebpage.com">Joeyswebpage</a>
+  <a href="http://www.Joeyswebpage.com">Joeyswebpage</a>
 
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   
