--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <a href="about.html">About Page</a>
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
+  <a href="https://www.Joeyswebpage.com"
+  target="_blank">Joeyswebpage</a>
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
 
 </body>
